# cs2-friendwatch

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: audio.rs  bootstrap.rs  config.rs  main.rs  notify.rs  steam.rs  watcher.rs
