[package]
name = "cs2-friendwatch"
version = "0.1.0"
edition = "2021"
description = "Watch Steam friends for a free CS2 lobby spot and prompt to join"
license = "MIT"

[dependencies]
eframe = "0.31"
egui = "0.31"
steamworks = { version = "0.12", features = ["raw-bindings"] }
notify-rust = "4"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rodio = { version = "0.20", default-features = false, features = ["symphonia-mp3"] }
rfd = "0.15"
